updated figure references in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="item">
 				<div class="fill">
 					<center><img 
-						src="file:///Users/ryanmc/Documents/My_website2/figures/Data Science in Geospace schematic.png" 
+						src="figures/Data Science in Geospace schematic.png" 
 						class = "img-fluid" 
 						height=450  
 						alt="Defining a new frontier in space physics" > </center>
@@ -142,14 +142,14 @@
 		<ul id="categories" class="clr">
 		  <li>
 			<div>
-				<img src="file:///Users/ryanmc/Documents/My_website2/figures/Heliophysics_Schematic.jpg"/>
+				<img src="figures/Heliophysics_Schematic.jpg"/>
 				<h1>Heliophysics &amp Space Weather</h1>
 				<p>Heliophysics is the study of the very nature of our active star and its effect on space. This effect has profound impact on our use of space, both through human presence and technology, colloquially known as space weather. However, Heliophysics also addresses a broader picture - the solar-terrestrial system provides a natural astrophysical laboratory through which to understand the entire universe.</p>
 			</div>
 		  </li>
 		  <li>
 			<div>
-				<img src="file:///Users/ryanmc/Documents/My_website2/figures/machine-learning_schematic.png"/>
+				<img src="figures/machine-learning_schematic.png"/>
 				<h1>Data Science &amp Machine Learning</h1>
 				<p>Scientific pursuit is mired in data - big, complex, and challenging data. The digital age has transformed the generation, storage, and transfer of knowledge and we face a critical time in science to envision, design, and deliver data technologies that ease the challenges of knowledge sharing. 
 									I use tools and technologies from the budding field of data science to make science and engineering data more accessible and usable.</p>
@@ -157,7 +157,7 @@
 		  </li>
 		  <li>
 			<div>
-				<img src="file:///Users/ryanmc/Documents/My_website2/figures/new-frontier_schematic.png"/>
+				<img src="figures/new-frontier_schematic.png"/>
 				<h1>A New Frontier</h1>
 				<p>Progress comes at the intersection of disciplines, where the result is something entirely new. This is where my passion lies - in bringing together aerospace engineering, space physics, data science, and design to collectively deliver new knowledge. 
 									The 'new frontier' that exists in this space promises discovery and impact.</p>
