updated figure references in blog posts files

--- a/blog-posts-col.html
+++ b/blog-posts-col.html
@@ -131,8 +131,7 @@
           <p> <em> Posted on January 6, 2017 at 9:00 PM </em> </p>
 
           <!-- Preview Image -->
-          <!-- <img class="img-fluid rounded" src="file:///Users/ryanmc/Documents/My_website2/figures/McGranaghan_Hyperwall1.jpg" height="500" alt=""> -->
-          <img class="img-responsive" src="file:///Users/ryanmc/Documents/My_website2/figures/McGranaghan_Hyperwall1.jpg" alt="">
+          <img class="img-responsive" src="figures/McGranaghan_Hyperwall1.jpg" alt="">
 
 
           <!-- Post Content -->
@@ -175,7 +174,7 @@
 
 
           <!-- Preview Image -->
-          <img class="img-fluid rounded" src="file:///Users/ryanmc/Documents/My_website2/figures/Best-of-2017.jpg" height="200" alt="">
+          <img class="img-fluid rounded" src="figures/Best-of-2017.jpg" height="200" alt="">
 
           
           <p>Happy New Year!</p>
@@ -300,8 +299,7 @@
 
 
           <!-- Preview Image -->
-          <!-- <img class="img-fluid rounded" src="file:///Users/ryanmc/Documents/My_website2/figures/aurora_generic.jpg" height="500" alt=""> -->
-          <img class="img-responsive" src="file:///Users/ryanmc/Documents/My_website2/figures/aurora_generic.jpg" alt="">
+          <img class="img-responsive" src="figures/aurora_generic.jpg" alt="">
 
 
           <!-- Post Content -->
