updated cv file reference in cv.html file

--- a/cv.html
+++ b/cv.html
@@ -123,7 +123,7 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
- 				<a href="file:///Users/ryanmc/Documents/My_website2/files/Ryan_McGranaghan_CV_updated.pdf"><span class="glyphicon glyphicon-download-alt">  Download CV</span> 
+ 				<a href="files/Ryan_McGranaghan_CV_updated.pdf"><span class="glyphicon glyphicon-download-alt">  Download CV</span> 
             </div>
 		</div>
         <!-- /.row -->
