updated figure references in about.html

--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
         <div class="row">
             <div class="col-md-6">
 				<div class="thumbnail">
-					<img class="img-responsive" src="file:///Users/ryanmc/Documents/My_website2/figures/Me_Rach_afterPhD_defense.jpg" height="" alt="">
+					<img class="img-responsive" src="figures/Me_Rach_afterPhD_defense.jpg" height="" alt="">
                 </div>
             </div>
             <div class="col-md-6">
@@ -144,7 +144,7 @@
 			
             <div class="col-md-6">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="file:///Users/ryanmc/Documents/My_website2/figures/siblings.jpg" alt="">
+                    <img class="img-responsive" src="figures/siblings.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
         <div class="row">									
 					<div class="col-md-6">
 						<div class="thumbnail">
-							<img class="img-responsive" src="file:///Users/ryanmc/Documents/My_website2/figures/Tupelo.jpg" alt="">
+							<img class="img-responsive" src="figures/Tupelo.jpg" alt="">
 						</div>
 					</div>
 					<div class="col-md-6">
