--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
 			
             <div class="col-md-6">
                 <div class="thumbnail">
-                    <img class="img-responsive" src="figures/siblings.jpg" alt="">
+                    <img class="img-responsive" src="figures/siblings.JPG" alt="">
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
         <div class="row">									
 					<div class="col-md-6">
 						<div class="thumbnail">
-							<img class="img-responsive" src="figures/Tupelo.jpg" alt="">
+							<img class="img-responsive" src="figures/Tupelo.JPG" alt="">
 						</div>
 					</div>
 					<div class="col-md-6">
