fixed missing envelope icon

--- a/contact.html
+++ b/contact.html
@@ -132,8 +132,8 @@
                 <p><i class="fa fa-phone"></i> 
                     <abbr title="Phone">Work</abbr>: (818) 354-0926</p>
                 <!-- <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">Cell</abbr>: (865) 804-2169</p>
-                <p><i class="fa fa-envelope-o"></i> -->
+                    <abbr title="Phone">Cell</abbr>: (865) 804-2169</p> -->
+                <p><i class="fa fa-envelope-o"></i> 
                     <abbr title="Email">E</abbr>: <a href="mailto:ryan.mcgranaghan@colorado.edu.com">ryan.mcgranaghan@colorado.edu</a>
                 </p>
                 <p><i class="fa fa-envelope-o"></i> 
