trialing font size change

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			<div>
 				<img src="figures/Heliophysics_Schematic.jpg"/>
 				<h1>Heliophysics &amp Space Weather</h1>
-				<p>Heliophysics is the study of the very nature of our active star and its effect on space. This effect has profound impact on our use of space, both through human presence and technology, colloquially known as space weather. However, Heliophysics also addresses a broader picture - the solar-terrestrial system provides a natural astrophysical laboratory through which to understand the entire universe.</p>
+				<p> <font size=2> Heliophysics is the study of the very nature of our active star and its effect on space. This effect has profound impact on our use of space, both through human presence and technology, colloquially known as space weather. However, Heliophysics also addresses a broader picture - the solar-terrestrial system provides a natural astrophysical laboratory through which to understand the entire universe. </font> </p>
 			</div>
 		  </li>
 		  <li>
