--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="item">
 				<div class="fill">
 					<center><img 
-						src="figures/Data Science in Geospace schematic.png" 
+						src="figures/Data Science in Geospace schematic - compressed.png" 
 						class = "img-fluid" 
 						height=450  
 						alt="Defining a new frontier in space physics" > </center>
