--- a/about.html
+++ b/about.html
@@ -79,13 +79,13 @@
                                 <a href="blog-posts-col.html">Blog Posts</a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/ryanmcgranaghan/" target="_blank">LinkedIn</a>
+                                <a href="https://www.linkedin.com/in/ryanmcgranaghan/" target="_blank" rel="noopener norefferrer">LinkedIn</a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/AeroSciengineer" target="_blank">Twitter</a>
+                                <a href="https://twitter.com/AeroSciengineer" target="_blank" rel="noopener norefferrer">Twitter</a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/watch?v=cOVHUo_qbgc" target="_blank">My TEDx talk on Space Weather</a>
+                                <a href="https://www.youtube.com/watch?v=cOVHUo_qbgc" target="_blank" rel="noopener norefferrer">My TEDx talk on Space Weather</a>
                             </li>
                         </ul>
                     </li>
@@ -93,10 +93,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things that are making my heart sing <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="five-cut-fridays-col.html" target="_blank">Five-cut Friday Playlists</a>
+                                <a href="five-cut-fridays-col.html" target="_blank" rel="noopener norefferrer">Five-cut Friday Playlists</a>
                             </li>
                             <li>
-                                <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization" target="_blank">The beauty of information</a>
+                                <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization" target="_blank" rel="noopener norefferrer">The beauty of information</a>
                             </li>
                         </ul>
                     </li>
@@ -157,7 +157,7 @@
 					</div>
 					<div class="col-md-6">
 						<p> Personal:  </p>
-						<p> My personal time is spent reading, listening to and discovering new music, enjoying the great outdoors in any way possible, and following my favorite sports teams (Green Bay Packers, Pittsburgh Penguins and Pirates). In 2015 I was selected to give a <a href="https://www.youtube.com/watch?v=cOVHUo_qbgc" target="_blank"> TEDx</a> talk that gave me a deep passion for public speaking and the importance of communication and data visualization.  </p>
+						<p> My personal time is spent reading, listening to and discovering new music, enjoying the great outdoors in any way possible, and following my favorite sports teams (Green Bay Packers, Pittsburgh Penguins and Pirates). In 2015 I was selected to give a <a href="https://www.youtube.com/watch?v=cOVHUo_qbgc" target="_blank" rel="noopener norefferrer"> TEDx</a> talk that gave me a deep passion for public speaking and the importance of communication and data visualization.  </p>
 						<p> I'm an adventurous and active person always looking for new experiences. A few of my favorite things are good beers, coffees, and conversation. Oh, and, of course, enjoying time with my fiancé, Rachel, and blue tick hound, Tupelo!</p>
 					</div>
 		</div>
