--- a/cv.html
+++ b/cv.html
@@ -79,13 +79,13 @@
                                 <a href="blog-posts-col.html">Blog Posts</a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/ryanmcgranaghan/">LinkedIn</a>
+                                <a href="https://www.linkedin.com/in/ryanmcgranaghan/" target="_blank" rel="noopener norefferrer">LinkedIn</a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/AeroSciengineer">Twitter</a>
+                                <a href="https://twitter.com/AeroSciengineer" target="_blank" rel="noopener norefferrer">Twitter</a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/watch?v=cOVHUo_qbgc">My TEDx talk on Space Weather</a>
+                                <a href="https://www.youtube.com/watch?v=cOVHUo_qbgc" target="_blank" rel="noopener norefferrer">My TEDx talk on Space Weather</a>
                             </li>
                         </ul>
                     </li>
@@ -93,10 +93,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things that are making my heart sing <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="five-cut-fridays-col.html">Five-cut Friday Playlists</a>
+                                <a href="five-cut-fridays-col.html" target="_blank" rel="noopener norefferrer">Five-cut Friday Playlists</a>
                             </li>
                             <li>
-                                <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization">The beauty of information</a>
+                                <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization" target="_blank" rel="noopener norefferrer">The beauty of information</a>
                             </li>
                         </ul>
                     </li>
