--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                             <li>
                                 <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization" target="_blank" rel="noopener norefferrer">The beauty of information</a>
                             </li>
-                        </ul>
+                            <li>
+                                <a href="http://www.baseball-almanac.com/" target="_blank" rel="noopener norefferrer">The latest, and the most interesting, in baseball</a>
+                            </li>
+	            </ul>
                     </li>
                 </ul>
             </div>
