--- a/publications-col.html
+++ b/publications-col.html
@@ -98,6 +98,9 @@
                             <li>
                                 <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization" target="_blank" rel="noopener norefferrer">The beauty of information</a>
                             </li>
+			    <li>
+                                <a href="http://www.baseball-almanac.com/" target="_blank" rel="noopener norefferrer">The latest, and the most interesting, in baseball</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
