Added blog post about introduction to neural networks

--- a/blog-posts-col.html
+++ b/blog-posts-col.html
@@ -119,6 +119,38 @@
 		<!-- Post Content Column -->
         <div class="col-lg-8">
 
+<!-- Title -->
+          <h1 class="mt-4">Interactive introduction to neural networks</h1>
+
+          <!-- Author -->
+          <!--<p class="lead">
+            by
+            <a href="#">Start Bootstrap</a>
+          </p> 
+
+          <hr> --> 
+
+          <!-- Date/Time -->
+          <p> <em> Posted on September 30, 2018 at 9:24 PM </em> </p>
+
+          <!-- Preview Image -->
+          <img class="img-responsive" src="figures/McGranaghan_Hyperwall1.jpg" alt="">
+
+
+          <!-- Post Content -->
+
+		  <p>Data analytics (i.e., new approaches of data exploration, sophisticated statistical analysis, and Machine Learning) is the vehicle of innovation for disciplines across the spectrum from business to engineering, from science to art. Literacy in these techniques is a skill that all employers and projects require to the point that a new profession has emerged to support the growing demand: the data scientist. In January 2018 data science was named the ‘best job in America’, a recognition that it has now received three years running. Despite the explosion in importance and popularity, the <a href="https://www.mckinsey.com/~/media/McKinsey/Business%20Functions/McKinsey%20Analytics/Our%20Insights/The%20age%20of%20analytics%20Competing%20in%20a%20data%20driven%20world/MGI-The-Age-of-Analytics-Executive-summary.ashx">Mckinsey Global Institute</a> estimates that there is a 50% gap between data scientist supply and demand. </p>
+		  <p>Machine Learning understanding and capabilities are fundamental skills of data scientists. I’m passionately attempting to bring together data science with the Earth and Space Sciences, and am, therefore, crafting materials to introduce those from these disciplines who are not necessarily well versed in standard data science skills. </p>
+		  <p>Part one of this series is an <i>introduction to neural networks</i>. I presented this material during a presentation at NASA and have made it <a href="https://github.com/rmcgranaghan/Introduction-to-neural-networks">freely and openly available on my GitHub site</a>. At that link you will find the brief, high-level introduction to neural networks, and will be able to download the figures and the Jupyter Notebook script to step through explanations of neural network architecture and to develop an intuition for their operation.  </p>
+
+		  <p>Within the interactive notebook script you will find links to several other useful resources.  </p>
+		  <p>I hope this will allow you to discover the basics of neural networks and provide direction for you to further your understanding, apply Machine Learning, and embrace data science. </p>
+	  <hr>
+
+
+
+		</div>
+	      
           <!-- Title -->
           <h1 class="mt-4">Speaking about the importance of space from a weird, world famous stage</h1>
 
