--- a/about.html
+++ b/about.html
@@ -92,6 +92,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things that are making my heart sing <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+			    <li>
+                                <a href="https://www.originspodcast.co/" target="_blank" rel="noopener norefferrer">My podcast: Origins!</a>
+                            </li>
                             <li>
                                 <a href="five-cut-fridays-col.html" target="_blank" rel="noopener norefferrer">Five-cut Friday Playlists</a>
                             </li>
