--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,9 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things that are making my heart sing <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
+                                <a href="https://www.originspodcast.co/" target="_blank" rel="noopener norefferrer">My podcast: Origins!</a>
+                            </li>
+                            <li>
                                 <a href="five-cut-fridays-col.html" target="_blank" rel="noopener norefferrer">Five-cut Friday Playlists</a>
                             </li>
                             <li>
