--- a/contact.html
+++ b/contact.html
@@ -140,10 +140,13 @@
                 <!-- <p><i class="fa fa-phone"></i> 
                     <abbr title="Phone">Cell</abbr>: (865) 804-2169</p> -->
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:ryan.mcgranaghan@colorado.edu.com">ryan.mcgranaghan@colorado.edu</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:ryan.mcgranaghan@gmail.com">ryan.mcgranaghan@gmail.com</a>
                 </p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:ryan.mcgranaghan@jpl.nasa.gov">ryan.mcgranaghan@jpl.nasa.gov</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:rmcgranaghan@astraspace.net">rmcgranaghan@astraspace.net</a>
+                </p>
+                <p><i class="fa fa-envelope-o"></i> 
+                    <abbr title="Email">E</abbr>: <a href="mailto:ryan.m.mcgranaghan@nasa.gov">ryan.m.mcgranaghan@nasa.gov</a>
                 </p>
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
