--- a/contact.html
+++ b/contact.html
@@ -135,10 +135,10 @@
                     166 1/4 South Avenue 53<br>Los Angeles, CA 90042<br>
                 </p>
                 -->
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">Work</abbr>: (818) 354-0926</p>
-                <!-- <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">Cell</abbr>: (865) 804-2169</p> -->
+                #<p><i class="fa fa-phone"></i> 
+                #    <abbr title="Phone">Work</abbr>: (818) 354-0926</p>
+                #<!-- <p><i class="fa fa-phone"></i> 
+                #    <abbr title="Phone">Cell</abbr>: (865) 804-2169</p> -->
                 <p><i class="fa fa-envelope-o"></i> 
                     <abbr title="Email">E</abbr>: <a href="mailto:ryan.mcgranaghan@gmail.com">ryan.mcgranaghan@gmail.com</a>
                 </p>
