--- a/ints-pods-talks-col.html
+++ b/ints-pods-talks-col.html
@@ -134,8 +134,8 @@
         <!-- /.row -->
         <!-- Intro Content -->
         <div class="row">
-            <p> <strong> Santa Fe Institute Alien Crash Site</strong>, (2021), <a href="https://alien-crash-site.simplecast.com/episodes/what-lies-in-the-space-between-017-with-aerospace-engineer-ryan-mcgrahaghan"target="_blank">What lies in the space between? with Aerospace Engineer Ryan McGranaghan </a </p>
-            <p> <strong> NASA in Silicon Valley</strong>, (2018), <a href="https://www.nasa.gov/ames/nisv-podcast-ep92-lika-guhathakurta-and-ryan-mcgranaghan"target="_blank">Lika Guhathakurta and Ryan McGranaghan Talk About Space Weather </a </p>
+            <p> <strong> Santa Fe Institute Alien Crash Site Podcast </strong>, (2021), <a href="https://alien-crash-site.simplecast.com/episodes/what-lies-in-the-space-between-017-with-aerospace-engineer-ryan-mcgrahaghan"target="_blank">What lies in the space between? with Aerospace Engineer Ryan McGranaghan </a </p>
+            <p> <strong> NASA in Silicon Valley Podcast </strong>, (2018), <a href="https://www.nasa.gov/ames/nisv-podcast-ep92-lika-guhathakurta-and-ryan-mcgranaghan"target="_blank">Lika Guhathakurta and Ryan McGranaghan Talk About Space Weather </a </p>
             <p> <strong> National Science Foundation Convergence Accelerator Program</strong>, (2019), <a href="https://youtu.be/LIK3q_f8XOI"target="_blank">NSF Convergence Accelerator // Overview </a </p>
 	</div>
         <!-- /.row -->
