--- a/ints-pods-talks-col.html
+++ b/ints-pods-talks-col.html
@@ -161,7 +161,7 @@
         <!-- /.row -->
         <!-- Intro Content -->
         <div class="row">
-            <p> <strong> The Laboratory for Space Physics "Friends of the Magnetospere (FOM)" Series </strong>, (2021), <a href="https://drive.google.com/file/d/1iyML4lPYyxbVsoj5LDlei5OxeM5mJJoW/view?usp=sharing"target="_blank">Toward a Heliophysics Knowledge Commons: The Heliophysics KNOWledge Network (Helio-KNOW) </a </p>
+            <p> <strong> The Laboratory for Atmospheric and Space Physics "Friends of the Magnetospere (FOM)" Series </strong>, (2021), <a href="https://drive.google.com/file/d/1iyML4lPYyxbVsoj5LDlei5OxeM5mJJoW/view?usp=sharing"target="_blank">Toward a Heliophysics Knowledge Commons: The Heliophysics KNOWledge Network (Helio-KNOW) </a </p>
             <p> <strong> Machine Learning for Planetary and Space Physics </strong>, (2021), <a href="https://www.youtube.com/watch?v=dgU-rRXXGig&list=PL4kOs9mVzcpb8vA4gh08wEAPCZayIR_Pq&index=9"target="_blank">Advancing space physics research through machine learning and information representation: A use case </a </p>
             <p> <strong> Committee on Space Research (COSPAR) 2021 Conference </strong>, (2021), <a href="https://www.youtube.com/watch?v=PTEheOpoUAc"target="_blank">Quantifying Risk In Space Weather </a </p>
             <p> <strong> Ignite American Geophysical Union </strong>, (2020), <a href="https://www.youtube.com/playlist?list=PL8X9E6I5_i8g47LCVuZm5mmIU5EyZIeLg"target="_blank">Discover the space between disciplines </a </p>
