--- a/cv.html
+++ b/cv.html
@@ -132,7 +132,7 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
- 				<a href="files/Ryan_McGranaghan_CV(2).pdf"><span class="glyphicon glyphicon-download-alt">  Download CV</span> 
+ 				<a href="files/McGranaghan_CV(2).pdf"><span class="glyphicon glyphicon-download-alt">  Download CV</span> 
             </div>
 		</div>
         <!-- /.row -->
