--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
                     <abbr title="Email">E</abbr>: <a href="mailto:ryan.mcgranaghan@gmail.com">ryan.mcgranaghan@gmail.com</a>
                 </p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:rmcgranaghan@astraspace.net">rmcgranaghan@astraspace.net</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:ryan.mcgranaghan@orionspace.com">ryan.mcgranaghan@orionspace.com</a>
                 </p>
                 <p><i class="fa fa-envelope-o"></i> 
                     <abbr title="Email">E</abbr>: <a href="mailto:ryan.m.mcgranaghan@nasa.gov">ryan.m.mcgranaghan@nasa.gov</a>
