--- a/five-cut-fridays-col.html
+++ b/five-cut-fridays-col.html
@@ -144,6 +144,7 @@
                 <div class="col-xs-6 col1">
                 	<p>
                     On Spotify: <a href="https://open.spotify.com/user/rmcgrana" target="_blank" rel="noopener norefferrer"><i class="fa fa-spotify fa-2x"></i></a>
+                    The latest list is always here: <a href="https://tinyurl.com/Five-CutFridays" target="_blank" rel="noopener norefferrer"><i class="fa fa-spotify fa-2x"></i></a>
                 	</p>
                 </div>
                 
