--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
         <div class="row">
             <div class="col-md-6">
 				<div class="thumbnail">
-					<img class="img-responsive" src="figures/Me_Rach_afterPhD_defense.jpg" height="" alt="">
+					<img class="img-responsive" src="figures/RachelRyan-previews-13.jpg" height="" alt="">     <em>Photo by Samantha Floyd</em>
                 </div>
             </div>
             <div class="col-md-6">
@@ -165,13 +165,15 @@
         <div class="row">									
 					<div class="col-md-6">
 						<div class="thumbnail">
-							<img class="img-responsive" src="figures/Tupelo.JPG" alt="">
+							<img class="img-responsive" src="figures/sitting_with_Stella_Tup.JPEG" alt="">
 						</div>
 					</div>
 					<div class="col-md-6">
 						<p> Personal:  </p>
+						<p> But before I am a researcher I am many things. I’m also a Father, Husband to a Mother, Brother, Son, Companion. <p>
+						
 						<p> My personal time is spent reading, listening to and discovering new music, enjoying the great outdoors in any way possible, and following my favorite sports teams (Green Bay Packers, Pittsburgh Penguins and Pirates). In 2015 I was selected to give a <a href="https://www.youtube.com/watch?v=cOVHUo_qbgc" target="_blank" rel="noopener norefferrer"> TEDx</a> talk that gave me a deep passion for public speaking and the importance of communication and data visualization.  </p>
-						<p> I'm an adventurous and active person always looking for new experiences. A few of my favorite things are good beers, coffees, and conversation. Oh, and, of course, enjoying time with my fiancé, Rachel, and blue tick hound, Tupelo!</p>
+						<p> I'm an adventurous and active person always looking for new experiences. A few of my favorite things are good beers, coffees, and conversation. Oh, and, of course, enjoying time with my wife Rachel, learning alongside my daughter Stella, and exploring the world with my blue tick hound, Tupelo!</p>
 					</div>
 		</div>
         
