--- a/index.html
+++ b/index.html
@@ -96,14 +96,12 @@
                             <li>
                                 <a href="https://www.originspodcast.co/" target="_blank" rel="noopener norefferrer">My podcast: Origins!</a>
                             </li>
+                            <li>
+                                <a href="https://tinyurl.com/FlourishingCommons" target="_blank" rel="noopener norefferrer">A newsletter and community about flourishing and commons</a>
+                            </li>				
+				
 			    <li>
                                 <a href="five-cut-fridays-col.html" target="_blank" rel="noopener norefferrer">Five-cut Friday Playlists</a>
-                            </li>
-                            <li>
-                                <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization" target="_blank" rel="noopener norefferrer">The beauty of information</a>
-                            </li>
-                            <li>
-                                <a href="http://www.baseball-almanac.com/" target="_blank" rel="noopener norefferrer">The latest, and the most interesting, in baseball</a>
                             </li>
 	            </ul>
                     </li>
