--- a/blog-posts-col.html
+++ b/blog-posts-col.html
@@ -99,16 +99,14 @@
                             <li>
                                 <a href="https://www.originspodcast.co/" target="_blank" rel="noopener norefferrer">My podcast: Origins!</a>
                             </li>
+                            <li>
+                                <a href="https://tinyurl.com/FlourishingCommons" target="_blank" rel="noopener norefferrer">A newsletter and community about flourishing and commons</a>
+                            </li>				
+				
 			    <li>
                                 <a href="five-cut-fridays-col.html" target="_blank" rel="noopener norefferrer">Five-cut Friday Playlists</a>
                             </li>
-                            <li>
-                                <a href="https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization" target="_blank" rel="noopener norefferrer">The beauty of information</a>
-                            </li>
-                            <li>
-                                <a href="http://www.baseball-almanac.com/" target="_blank" rel="noopener norefferrer">The latest, and the most interesting, in baseball</a>
-                            </li>
-                        </ul>
+	            </ul>
                     </li>
                 </ul>
             </div>
@@ -124,6 +122,30 @@
 
           <!-- Post Content Column -->
           <div class="col-lg-8">
+		  
+		<!-- Title -->
+          <h1 class="mt-4">Announcing The Flourising Commons</h1>
+
+          <!-- Author -->
+          <!--<p class="lead">
+            by
+            <a href="#">Start Bootstrap</a>
+          </p> 
+
+          <hr> --> 
+
+          <!-- Date/Time -->
+          <p> <em> Posted on December 30, 2022 </em> </p>
+
+
+          <!-- Post Content -->
+
+		  <p> This blog site is not regularly maintained, but I do write and attempt to use writing together as a way to explore healthy relationality. You can find some of that writing and join the community at the Substack newsletter, The Flourishing Commons <a href="https://tinyurl.com/FlourishingCommons">. Talk to you there! </p>
+		<hr>
+
+
+
+		</div>
 
 	  <!-- Title -->
           <h1 class="mt-4">Interactive introduction to neural networks</h1>
