--- a/blog-posts-col.html
+++ b/blog-posts-col.html
@@ -146,6 +146,8 @@
 
 
 		</div>
+	  <!-- Post Content Column -->
+          <div class="col-lg-8">
 
 	  <!-- Title -->
           <h1 class="mt-4">Interactive introduction to neural networks</h1>
