--- a/blog-posts-col.html
+++ b/blog-posts-col.html
@@ -140,7 +140,7 @@
 
           <!-- Post Content -->
 
-		  <p> This blog site is not regularly maintained, but I do write and attempt to use writing together as a way to explore healthy relationality. You can find some of that writing and join the community at the Substack newsletter, The Flourishing Commons <a href="https://tinyurl.com/FlourishingCommons">. Talk to you there! </p>
+		  <p> This blog site is not regularly maintained, but I do write and attempt to use writing together as a way to explore healthy relationality. You can find some of that writing and join the community at the Substack newsletter, <a href="https://tinyurl.com/FlourishingCommons"> The Flourishing Commons</a>. Talk to you there! </p>
 		<hr>
 
 
