--- a/contact.html
+++ b/contact.html
@@ -144,9 +144,6 @@
                     <abbr title="Email">E</abbr>: <a href="mailto:ryan.mcgranaghan@gmail.com">ryan.mcgranaghan@gmail.com</a>
                 </p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:ryan.mcgranaghan@orionspace.com">ryan.mcgranaghan@orionspace.com</a>
-                </p>
-                <p><i class="fa fa-envelope-o"></i> 
                     <abbr title="Email">E</abbr>: <a href="mailto:ryan.m.mcgranaghan@nasa.gov">ryan.m.mcgranaghan@nasa.gov</a>
                 </p>
                 <ul class="list-unstyled list-inline list-social-icons">
@@ -156,7 +153,10 @@
                     <li>
                         <a href="https://twitter.com/AeroSciengineer"><i class="fa fa-twitter-square fa-2x"></i></a>
                     </li>
-                </ul>
+                    <li>
+                        <a href="https://tinyurl.com/FlourishingCommons"><i class="fa fa-pencil fa-2x"></i></a>
+                    </li>
+		</ul>
             </div>
         </div>
         <!-- /.row -->
